Fix play button position on iphone. Closes #66.

--- a/less/app.less
+++ b/less/app.less
@@ -539,12 +539,12 @@ a.nav-btn  {
         }
 	    &#modal-intro {
 	        min-height: auto;
-	        h1 { font-size: 36px; }
-	        p { font-size: 16px; }
+	        h1 { font-size: 30px; margin-bottom: 8px;}
+	        p { font-size: 16px; margin-bottom: 5px; }
 	        
 	        .modal-body { 
-	            padding-top: 44px;
-	            padding-bottom: 66px;
+	            padding-top: 26px;
+	            padding-bottom: 62px;
 	        }
 	    }
 	}
